refactored assertions in SignificantTermsAggregationIntegrationTest